# dragon-bot-slack

./: .gitignore  Dockerfile  README.md  app.py  bot.err  manifest.json  pyproject.toml  run.sh  stop.sh
handlers/: ai.py  channel_request.py  fun.py  github_webhooks.py  help.py  join_manager.py  leveling.py  message_dispatcher.py  miscellaneous.py  welcome.py  xkcd.py
resources/: stars.json
resources/fun/: april_fools_vids.json
